sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: '(' expected but identifier found.
  while estTrie == false {
        ^AlgBubbleSort1:16: error: illegal start of simple expression
}
^